turtleart.lessons.turtleart.Main.DiskFour.scala.error
Source:8: error: not found: value Red
	setCouleur(Red)
                   ^Source:14: error: not found: value Yellow
	setCouleur(Yellow)
                   ^Source:20: error: not found: value Pink
	setCouleur(Pink)
                   ^